<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_login"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imageMainLogo"
        android:layout_width="157dp"
        android:layout_height="110dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <EditText
        android:id="@+id/editMainEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorTextLight"
        android:textColorHighlight="@color/colorTextLight"
        android:textColorHint="@color/colorTextLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageMainLogo"
        android:backgroundTint="@color/colorTextLight"/>

    <EditText
        android:id="@+id/editMainPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorTextLight"
        android:ems="10"
        android:hint="@string/textMainPassword"
        android:inputType="textVisiblePassword|textPassword|textEmailAddress"
        android:textColor="@color/colorTextLight"
        android:textColorHighlight="@color/colorTextLight"
        android:textColorHint="@color/colorTextLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMainEmail" />

    <Button
        android:id="@+id/buttonMainEntrar"
        android:layout_width="234dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorButtonBackground"
        android:text="@string/entrar"
        android:textColor="@color/colorTextLight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorButtonBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMainPassword" />

    <TextView
        android:id="@+id/textMainEsqueciEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/esqueci_usuario_e_ou_senha"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMainEntrar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/cadastrar_se"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMainEsqueciEmail" />

    <TextView
        android:id="@+id/textMainPrivacidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/privacidade"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>