<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NovoAtorActivity">

    <EditText
        android:id="@+id/editNovoAtorDescricaoFilme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/descri_o_do_filme"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNovoAtorFilme" />

    <EditText
        android:id="@+id/editNovoAtorNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/nome_do_ator"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNovoAtorFilme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/nome_do_filme"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNovoAtorNome" />

    <Button
        android:id="@+id/buttonNovoAtorSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="40dp"
        android:text="Salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNovoAtorDescricaoFilme" />

    <Button
        android:id="@+id/buttonNovoAtorCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="12dp"
        android:text="Cancelar"
        app:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toStartOf="@+id/buttonNovoAtorSalvar"
        app:layout_constraintTop_toBottomOf="@+id/editNovoAtorDescricaoFilme" />

    <Button
        android:id="@+id/buttonNovoAtorFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="Foto ator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNovoAtorDescricaoFilme" />

    <Button
        android:id="@+id/buttonNovoAtorFotoFilme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Foto filme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNovoAtorFoto" />

    <ImageView
        android:id="@+id/imageViewNovoAtorFoto"
        android:layout_width="82dp"
        android:layout_height="83dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toEndOf="@+id/buttonNovoAtorFoto"
        app:layout_constraintTop_toBottomOf="@+id/editNovoAtorDescricaoFilme"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/imageViewNovoAtorFotoFilme"
        android:layout_width="84dp"
        android:layout_height="67dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/buttonNovoAtorFotoFilme"
        app:layout_constraintTop_toBottomOf="@+id/imageViewNovoAtorFoto"
        app:srcCompat="@android:drawable/ic_menu_crop" />
</androidx.constraintlayout.widget.ConstraintLayout>